# BuildLimitChanger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  map.txt
.github/workflows/: build.yml  release.yml
src/: config.rs  dimension_hook.c  dimension_hook.cpp  dimension_hook.h  dimension_hook.hpp  hook.h  hook.hpp  hook.rs  lib.rs  logger.rs  main.c  main.cpp  searcher.rs  sections.rs  utils.c  utils.cpp  utils.h  utils.hpp  utils.rs
src/binary_parser/: elf_parser.h  elf_parser.hpp  searcher.c  searcher.cpp  section_parser.c  section_parser.cpp  section_parser.h  section_parser.hpp
src/config/: config_manager.c  config_manager.cpp  config_manager.h  config_manager.hpp
src/decoder/: x64_decoder.c  x64_decoder.cpp  x64_decoder.h  x64_decoder.hpp
